Lagt til tester for AmtArrangorClient, AmtPersonServiceClient og IsOp… (#490)
Lagt til tester for AmtArrangorClient, AmtPersonServiceClient og IsOppfolgingstilfelleClient